fix(assignment-problem-results): fix table alignments

--- a/apps/frontend/src/app/pages/assignment-problem/+results/results.style.scss
+++ b/apps/frontend/src/app/pages/assignment-problem/+results/results.style.scss
@@ -1,1 +1,13 @@
 @import 'libs/shared/styles/tabs';
+
+.title {
+  text-align: center;
+  padding: 16px;
+  margin: 0;
+}
+
+.table-wrapper {
+  display: flex;
+  padding: 8px;
+  overflow-x: auto;
+}
